css/styles.css
/*
name	hex	rgba	colorname
red	#ED001C	RGBA(237, 0, 28, 1)	Cadmium Red
orangered	#FF4300	RGBA(255, 67, 0, 1)	Orange Red
orange	#FF8700	RGBA(255, 135, 0, 1)	Dark Orange
mango	#FFB100	RGBA(255, 177, 0, 1)	UCLA Gold
lime	#92E234	RGBA(146, 226, 52, 1)	Atlantis
green	#3BCB56	RGBA(61, 211, 90, 1)	UFO Green
mint	#00D4BB	RGBA(0, 212, 187, 1)	Robin Egg Blue
teal	#13B89F	RGBA(19, 184, 159, 1)	Light Sea Green
blue	#149EF0	RGBA(20, 158, 240, 1)	Dodger Blue
alien blue	#0077D6	RGBA(0, 119, 214, 1)	True Blue
pink	#FF63AC	RGBA(255, 99, 172, 1)	Magenta
purple	#7F4FC4	RGBA(127, 79, 196, 1)	Fuchsia Blue
gold	#DEBE22	RGBA(222, 190, 34, 1)	Sunflower
brown	#A16A3E	RGBA(161, 106, 62, 1)	Cape Palliser
pale grey	#EFEFED	RGBA(239, 239, 237, 1)	White
grey	#A5A4A4	RGBA(165, 164, 164, 1)	Gray Chateau
dark grey	#545452	RGBA(84, 84, 82, 1)	Dark Gray
semi black	#222222	RGBA(34, 34, 34, 1)	Black
*/

:root {
    --primary-bg-color: #EFEFED; /* Light mode background color */
    --primary-alt-bg-color: #A5A4A4;
    --primary-text-color: #222222;  /* Light mode text color */

    --secondary-bg-color: #222222;   /* Dark mode background color */
    --secondary-alt-bg-color: #545452;
    --secondary-text-color: #f5f5f5; /* Dark mode text color */

    --header-color: #ff5700;        /* Header color */
    --light-search-color: #f8f8f6;
    --dark-search-color: #2a2a2a;
  }

/* Basic reset and styling */
* {
    font-family: 'Reddit Sans', sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    transition: background-color 0.3s, color 0.3s;
}

.container {
    text-align: center;
    width:800px;
}

h1 {
    font-size: 100px;
    margin-bottom: 20px;
    color: var(--header-color); /* Header color */
}

/* Flex container for the search input and button */
.search-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%; /* Full width container */
    margin: 0 auto; /* Center the container */
    padding: 0 25px; /* Add padding to the left and right */
    box-sizing: border-box; /* Ensure padding is included in the element’s width */
  }

/* Make the search bar flexible to adjust based on the button */
.search-bar {
    flex: 1; /* Allows the input to grow and shrink as needed */
    padding: 10px;
    font-size: 18px;
    border: 0px;
    border-radius:4px;
    background-color: var(--light-search-color);
    color: var(--primary-text-color);
    margin-right: 10px; /* Space between search input and button */
    min-width: 250px;
}

.search-button {
    padding: 10px 15px;
    font-size: 18px;
    border: 0px;
    border-radius: 4px;
    cursor: pointer;
    background-color: var(--primary-alt-bg-color);
    color: var(--primary-text-color);
    white-space: nowrap; /* Prevents text wrapping in the button */
}

/* RSS marquee Wrapper */
.rss-marquee-wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 5px 26px; /* Center the container */
    box-sizing: border-box; /* Ensure padding is included in the element’s width */
    overflow: hidden;
}

/* marquee Content */
.rss-marquee {
    flex: 1; /* Allows the input to grow and shrink as needed */
    min-width: 300px;
    height: 20px;
    white-space: nowrap; /* Prevent wrapping of text */
    animation: scroll-left 10s linear infinite; /* Adjust speed as needed */
    font-size: 16px; /* Adjust font size */
    color: var(--primary-text-color);
}

/* Scrolling Animation */
@keyframes scroll-left {
    from {
        transform: translateX(0%);
    }
    to {
        transform: translateX(-100%);
    }
}

/* Toggle Switch Styles */
.toggle-wrapper {
    position: absolute;
    top: 20px;
    right: 20px;
}

.toggle-label {
    display: inline-block;
    width: 60px;
    height: 30px;
    background-color: var(--primary-alt-bg-color);
    border-radius: 30px;
    position: relative;
    cursor: pointer;
    transition: background-color 0.3s;
}

.toggle-label::after {
    content: '';
    width: 26px;
    height: 26px;
    background-color: var(--light-search-color);
    border-radius: 50%;
    position: absolute;
    top: 2px;
    left: 2px;
    transition: transform 0.3s;
}

/* Dark mode activated */
input[type="checkbox"]:checked + .toggle-label {
    background-color: var(--secondary-alt-bg-color);
}

input[type="checkbox"]:checked + .toggle-label::after {
    transform: translateX(30px);
}

/* Hide the checkbox */
.toggle-input {
    display: none;
}

/* Light and dark mode styles */
body.light-mode {
    background-color: var(--primary-bg-color);
    color: var(--secondary-bg-color);
}

body.dark-mode {
    background-color: var(--secondary-bg-color);
    color: var(--primary-bg-color);
}

/* Dark mode search bar */
body.dark-mode .search-bar {
    background-color: var(--dark-search-color);
    color: var(--secondary-text-color);
}
  
/* Dark mode search button */
body.dark-mode .search-button {
    background-color: var(--secondary-alt-bg-color);
    color: var(--secondary-text-color);
}

/* Dark mode search button */
body.dark-mode .rss-marquee {
    color: var(--secondary-text-color);
}

